# freezabledict2

./: README.md  pyproject.toml
.github/workflows/: run-tests.yml
tests/: test_frozendict.py
