[project]
name = "frozendict"
version = "0.1.0"
description = "freezable dictionary like object inspired by frozenlist."
readme = "README.md"
authors = [
    { name = "Vizonex", email = "VizonexBusiness@gmail.com" }
]

requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools", "cython", "wheel"]

[tool.setuptools]
zip-safe = false
# Important tip: use packages arguments they help with not needing a src directory...
packages = ['frozendict']

ext-modules = [
{name = "frozendict._frozendict", sources = ["frozendict/_frozendict.pyx"]}
]

# [project.urls]
#     repository = "https://github.com/Vizonex/frozendict.git"
